# lambdadrop

./: .gitignore  Cargo.toml  README.md
migrations/: 0101_initial.sql
src/: config.rs  error.rs  main.rs
src/db/: sqlite.rs
src/handlers/: mod.rs
src/models/: drop.rs
src/utils/: id.rs
