[package]
name = "lambdadrop"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }

# Db
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"

# Utilities
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = "0.4.42"
dotenv = "0.15.0"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4"] }

# Random
rand = "0.9.2"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
